--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
     crossorigin="anonymous">
     </script>
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous">
+    </script>
     <title>Weather Dashboard</title>
 </head>
 
@@ -37,14 +42,9 @@
     </div>
 
     <div class="d-flex g-primary ps-3 pe-5 gy-4">
-        <div class="col-12 col-md-3 flex-column align-center bg-light p-5">
-          <h4 id="cityOne" class="text-primary">Detroit</h4>
-          <h4 id="cityTwo" class="text-primary">Houston</h4>
-          <h4 id="cityThree" class="text-primary">New York</h4>
-          <h4 id="cityFour" class="text-primary">Los Angelos</h4>
-          <h4 id="cityFive" class="text-primary">Chicago</h4>
-          <h4 id="citySix" class="text-primary">Des Moines</h4>
-        </div>
+        
+        <ul id="searchList" class="col-12 col-md-3 flex-column align-center bg-light p-5">
+        </ul>
         
         <!-- <div class="col-12 col-md-1 flex-column align-center bg-light m-4 border border-dark text-center">
             <h5>7/7/23 <span id="result-text"></span></h5>
