--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
     <div class="d-flex g-primary ps-3 pe-5 gy-4">
         
-        <div id="searchList" class="col-12 col-md-3 flex-column align-center bg-light p-5">
-        </div>
+        <ul id="searchList" class="col-12 col-md-3 flex-column align-center bg-light p-5">
+        </ul>
 
     <div class="test" id="response-text"></div>    
         
