--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         </div>
     </div>
 
-    <ul id="searchList" class="col-12 col-md-3 flex-column align-center bg-light p-5">
-    </ul>
+    <div id="searchList" class="col-12 col-md-3 flex-column align-center bg-light p-5">
+    </div>
     
     <div id="cards" class="d-flex ps-3 pe-5 gy-4">
         
