--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <h3 id="cardsHeader" class="text-primary ms-6">5 Day Forecast</h3>
     <div id="cards" class="d-flex ps-3 pe-5 gy-4">
     </div>
-    <div id="searchList" class="col-12 col-md-12 m-4 flex-column align-center bg-light p-5">
+    <h3 id="searchHeader" class="text-primary ms-6">SEARCH HISTORY: Click To See Weather</h3>
+    <div id="searchList" class="col-12 col-md-12 m-4 flex-column align-center bg-light">
     </div>
       
     <script src="./assets/javascript/script.js"> </script>
