cleaned up code

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             <button id="btn" type="button" class="btn btn-info btn-block w-100">Search</button>
           </form>
         </div>
-    
         <div id = "today" class="col-12 col-md-9 flex-column align-center bg-light p-5 mt-4">
             <h2>City: <span id="targetCity"> </span></h2>
             <h3>Today:<span id="currentDay"></span></h3>
@@ -42,11 +41,9 @@
         </div>
     </div>
     <h3 id="cardsHeader" class="text-primary ms-6">5 Day Forecast</h3>
-    <div id="cards" class="d-flex ps-3 pe-5 gy-4">
-    </div>
+    <div id="cards" class="d-flex ps-3 pe-5 gy-4"></div>
     <h3 id="searchHeader" class="text-primary ms-6">SEARCH HISTORY: Click To See Weather</h3>
-    <div id="searchList" class="col-12 col-md-12 m-3 flex-column align-center bg-light">
-    </div>
+    <div id="searchList" class="col-12 col-md-12 m-3 flex-column align-center bg-light"></div>
       
     <script src="./assets/javascript/script.js"> </script>
 </body>
