--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <script
-    src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
-    crossorigin="anonymous">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+        integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous">
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/utc.js"></script>
     <script>dayjs.extend(window.dayjs_plugin_utc)</script>
-    <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+        </script>
     <title>Weather Dashboard</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-primary d-flex justify-content-center p-3">
         <h1 class="navbar-brand fs-1 text-white">Weather Dashboard</h1>
-    </nav> 
-    <div class="d-flex g-primary ps-3 pe-5 gy-4">
-        <div class="col-12 col-md-3 flex-column align-center bg-light">
-          <h3 class="text-primary text-align-center pt-5 ps-1">Search For A City</h3>
-          <form id="search-form" class="form w-100 pt-1 pe-5 ps-2">
-            <input id="input" class="form-input w-100" type="text" placeholder="Search!">
-            <button id="btn" type="button" class="btn btn-info btn-block w-100">Search</button>
-          </form>
+    </nav>
+    <div id="searchCity" class="d-flex g-primary ps-3 pe-5 gy-4">
+        <div class="col-12 col-md-3 col-sm-12 flex-column align-center bg-light">
+            <h3 class="text-primary text-align-center pt-5 ps-1">Search For A City</h3>
+            <form id="search-form" class="searchForm form w-100 pt-1 pe-5 ps-2">
+                <input id="input" class="form-input w-100" type="text" placeholder="Search!">
+                <button id="btn" type="button" class="btn btn-info btn-block w-100">Search</button>
+            </form>
         </div>
-        <div id = "today" class="col-12 col-md-9 flex-column align-center bg-light p-5 mt-4">
+        <div id="today" class="col-md-9 col-sm-12 flex-column align-center bg-light p-5 mt-4">
             <h2>City: <span id="targetCity"> </span></h2>
             <h3>Today:<span id="currentDay"></span></h3>
             <h4>Temp: <span id="currentTemp"></span> °F</h4>
@@ -41,10 +38,11 @@
         </div>
     </div>
     <h3 id="cardsHeader" class="text-primary ms-6">5 Day Forecast</h3>
-    <div id="cards" class="d-flex ps-3 pe-5 gy-4"></div>
+    <div id="cards" class="d-flex gy-4"></div>
     <h3 id="searchHeader" class="text-primary ms-6">SEARCH HISTORY: Click To See Weather</h3>
     <div id="searchList" class="col-12 col-md-12 m-3 flex-column align-center bg-light"></div>
-      
+
     <script src="./assets/javascript/script.js"> </script>
 </body>
+
 </html>
